# light-guide

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  Readme.md  guide.db  package.json  pnpm-lock.yaml  prompt_1.txt  prompt_2.txt  test_connection.js
agent/: Cargo.toml
agent/src/: lib.rs  main.rs
agent/src/apps/: mod.rs
agent/src/config/: mod.rs
agent/src/system/: mod.rs
agent/src/websocket/: mod.rs
assets/styling/: dialog.css  echo.css  main.css  navbar.css
certs/: registry.crt  registry.key
client/: package.json  pnpm-lock.yaml  vite.config.js
client/src/: App.vue
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
examples/: docker.rs
migrations/: 20241129095005_init.sql
shared/types/: mod.rs
src/: error.rs  file_server.rs  lib.rs  main.rs  registry.rs  sever.rs  web_server.rs
src-tauri/: tauri.conf.json
src/background/: mod.rs
src/components/: dialog.rs  mod.rs
src/handlers/: docker.rs  mod.rs  registry.rs  sse.rs  static_file.rs
src/models/: docker.rs  mod.rs  registry.rs  settings.rs
src/utils/: cert.rs  mod.rs
src/views/: home.rs  navbar.rs
web/: README.md  components.d.ts  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
web/src/: App.vue  main.js  style.css
web/src/api/: request.js
web/src/api/docker/: index.js
web/src/components/: ContentArea.vue  Header.vue  HelloWorld.vue  MainLayout.vue  Sidebar.vue  TabManager.vue
web/src/layouts/components/: DefaultLayoutWithVerticalNav.vue  NavItems.vue  UserProfile.vue
web/src/plugins/iconify/: package-lock.json
web/src/plugins/router/: routes.js
web/src/router/: index.js
web/src/router/routes/: index.js
web/src/stores/: tabs.js
web/src/utils/: time.js
web/src/views/: AboutView.vue  DashboardView.vue  HomeView.vue  SettingsView.vue  UsersView.vue
(+10 files in other folders)
