[package]
name = "light-guide"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "runtime-tokio",
    "sqlite",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
